k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-framework
  labels:
    app: ml-framework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-framework
  template:
    metadata:
      labels:
        app: ml-framework
    spec:
      containers:
      - name: ml-framework
        image: haining/ml-framework:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app/artifacts
          name: model-storage
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: model-storage
        persistentVolumeClaim:
          claimName: model-pvc
